--- a/服務啟動指南.md
+++ b/服務啟動指南.md
@@ -73,10 +73,16 @@ python -m streamlit run streamlit_app.py --server.port 8501 --server.address 0.0
 pip install -r requirements.txt
 ```
 
-### 2. 設定API密鑰（可選）
-創建 `.env` 檔案：
+### 2. 設定環境變數（OpenAI 與 SQL Server）
+在專案根目錄建立 `.env` 檔案，填入：
 ```env
 OPENAI_API_KEY=your-openai-api-key-here
+DB_DRIVER={ODBC Driver 17 for SQL Server}
+DB_SERVER=your_server.database.windows.net
+DB_DATABASE=your_database_name
+DB_USER=your_username
+DB_PASSWORD=your_password
+DB_TABLE=courses
 ```
 
 ### 3. 檢查必要檔案
